# CHMAP

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  README_setup  about.html  alembic.ini  conda_recipe_chd.yml  conda_recipe_chmap.yml  default.profraw  index.html  requirements.txt  search.html  setup.cfg  setup.conf  setup.sh  sitemap.xml
CHD-mkdocs/: default.profraw  mkdocs.yml
about/: index.html
alembic/: env.py
analysis/: Beta-y_functionals_analysis.py  CHD_create_map_pipeline.py  CHD_pipeline.py  Fit_BetaAndY_4_VariedIntensityBins.py  Fit_Beta_v_mu.py  Generate_theoretical_LBCCs.py  Intensity-bin_analysis.py  Intensity-bin_analysis_looped.py  LBCC_apply_fit.py  LBCC_hist_analysis.py  LBCC_mu-hist.py  LBCC_mu-hist_2011.py  LBCC_theoretic_funcs.py  LBCC_theoretic_pipeline.py  LBCC_theoretic_pipeline_example.py  Moving_avg_cadence_analysis.py  Optimal_Intensity_Bins.py  Plot_Missing_Images.py  Test_Optimization.py  apply_lbcc.py  beta-y_functionals.py  beta-y_theoretical_analysis.py  correct_images.py  generate_functionals_plots.py  generate_histogram_plots.py  generate_theoretic_plots.py
chd/: chd.html  f2py.html
conf/: example_setup.conf
data_products/: CHD_fullCR.py  CR_mapping_funcs.py  DP_funs.py  chd_mu_probability_maps.py  chd_probability_maps.py  image_testing.py  map_running_averages.py  quality_maps.py  running_average_maps.py  standard_synoptic_map.py  threshold_testing.py  varying_threshold_maps.py  weighted_maps.py
database/: db_classes.py  db_funs.py
db/: db.html  iit.html  lbc.html  map.html
dp/: cr.html  ed.html  qm.html  (+1 more)
(+658 files in other folders)
